reference/test/harness/analysis_type_check/bad_bug29.c
typedef struct { int x; } foo;

void f() {
    foo *foo;
    foo *bar;
}
